{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 103,
  "lineage": "743d4f77-9719-f18f-c299-e98a65beb9dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:internet-gateway/igw-0f87e63b0686c1136",
            "id": "igw-0f87e63b0686c1136",
            "owner_id": "302263080696",
            "tags": {
              "Name": "app-igw"
            },
            "tags_all": {
              "Name": "app-igw"
            },
            "vpc_id": "vpc-009c1bc51c87857f4"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:route-table/rtb-09b8a36dffe94d95f",
            "id": "rtb-09b8a36dffe94d95f",
            "owner_id": "302263080696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f87e63b0686c1136",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-public-route-table"
            },
            "tags_all": {
              "Name": "app-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c1bc51c87857f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f03d0d34f36c01eb",
            "route_table_id": "rtb-09b8a36dffe94d95f",
            "subnet_id": "subnet-0985f0fe5c199cbd2"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:security-group/sg-04df30fe537ed2453",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04df30fe537ed2453",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20241110171432961200000002",
            "name_prefix": "terraform-",
            "owner_id": "302263080696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-security-group"
            },
            "tags_all": {
              "Name": "ecs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c1bc51c87857f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:subnet/subnet-0a5f33b4ada9147f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5f33b4ada9147f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263080696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet"
            },
            "tags_all": {
              "Name": "app-private-subnet"
            },
            "vpc_id": "vpc-009c1bc51c87857f4"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:subnet/subnet-0985f0fe5c199cbd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0985f0fe5c199cbd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263080696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet"
            },
            "tags_all": {
              "Name": "app-public-subnet"
            },
            "vpc_id": "vpc-009c1bc51c87857f4"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:302263080696:vpc/vpc-009c1bc51c87857f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c06844721c2b197e",
            "default_route_table_id": "rtb-04f7feabb216e4197",
            "default_security_group_id": "sg-085ee6bc5fb7f763c",
            "dhcp_options_id": "dopt-062018228e88c1a17",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009c1bc51c87857f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f7feabb216e4197",
            "owner_id": "302263080696",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    }
  ]
}